fix #351 + dark mode for off accessories

--- a/ui/src/app/modules/accessories/types/fan/fan.component.scss
+++ b/ui/src/app/modules/accessories/types/fan/fan.component.scss
@@ -1,11 +1,3 @@
-::ng-deep .switch-on {
-  background-color: #FFF;
-  
-  #accessoryIcon {
-    fill: #1976D2;
-  }
-}
-
 .fan-mode-control {
   .btn {
     font-size: 1.4rem;
