--- a/ui/src/app/modules/accessories/types/thermostat/thermostat.component.scss
+++ b/ui/src/app/modules/accessories/types/thermostat/thermostat.component.scss
@@ -1,7 +1,3 @@
-::ng-deep .switch-on {
-  background-color: #FFF;
-}
-
 .temperature-circle {
   position: relative;
   display: inline-block;
@@ -34,6 +30,8 @@
 .no-current-state {
   background-color: #42d672;
   color: #FFF;
+  -webkit-transition: all .15 ease-in-out;
+  transition: all .15 ease-in-out;
 }
 
 .thermostat-mode-control {
