--- a/ui/src/scss/styles.scss
+++ b/ui/src/scss/styles.scss
@@ -188,3 +188,16 @@ button {
 .toast-warning {
   background-color: #F89406 !important;
 }
+
+/* Accessory Control Global CSS */
+.accessory-box {
+  background-color: #e0e0e0;
+}
+
+.switch-on {
+  background-color: #FFF;
+  
+  #accessoryIcon {
+    fill: #1976D2 !important;
+  }
+}
